--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Deepiri - Transform your productivity with gamification" />
-    <title>Deepiri - AI R&D Collective for Cloud Productivity</title>
+    <title>Deepiri - AI R&D Collective</title>
   </head>
   <body>
     <div id="root"></div>
