Updated the SEO accessibility with descriptive image alt text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Deepiri - Transform your productivity with gamification" />
     <title>Deepiri - AI R&D Collective</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Deepiri - AI R&D Collective" />
+    <meta property="og:description" content="Deepiri - Transform your productivity with gamification" />
+    <meta property="og:image" content="https://deepiri.com/logo.png" />
+    <meta property="og:image:alt" content="Deepiri logo" />
+    <meta property="og:url" content="https://deepiri.com" />
+    <meta property="og:type" content="website" />
+    <!-- JSON-LD Organization schema to signal preferred logo/image to search engines -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Deepiri",
+      "url": "https://deepiri.com",
+      "logo": "https://deepiri.com/logo.png",
+      "image": "https://deepiri.com/logo.png"
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
