Change favicon from SVG to ICO format
Updated favicon link from SVG to ICO format.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Deepiri - Transform your productivity with gamification" />
     <title>Deepiri - AI R&D Collective</title>
@@ -30,4 +30,5 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
 
